sad proof that Intellij is not able to handle the java module system with maven modules correctly :/